# pystk_project

./: .gitignore  README.md  TestYacine.txt  gitignore.txt  main.py  optimise_kart.py  pyproject.toml  requirements.txt  t.txt
Donkey Bombs/: main.py  pyproject.toml
demopilote/: main.py
docs/: index.html  results.html
pystk2_gymnasium/: main.py  pyproject.toml
src/agents/: RandomAgent.py
src/agents/HiddenAgents/: EulerAgent.py  ItemsAgent.py  MedianAgent.py
src/agents/team1/: ConfigFileTeam1.yaml  agent1.py  agent_base.py  agent_center.py  agent_drift.py  agent_items.py  agent_obstacles.py  agent_rescue.py  agent_speed.py  agent_virage.py  agentwrappers.py  configFIleTastyCrousteam.yaml  multi_testagent.py  optuna_optimization.py  testagent.py
src/agents/team2/: Kart_drift.py  README.md  acceleration_kart.py  agent2.py  anticipe_kart.py  configDemoPilote.yaml  demopilote echange  hit_rivals.py  kart_rescue.py  optimise_kart.py  react_items.py  rival_attack.py  shield_kart.py  steering_piste.py
src/customAgents/: RandomAgent.py
src/main/: __init__.py  full_no_display.py  mono_race_display.py  multi_track_race_display.py  race_display.py  ranking.py  scores.py  single_track_race_display.py  single_track_race_display_team_3.py  test_race_display.py
src/main_tests/: race.py
src/pystk2_gymnasium/: envs.py  pystk_process.py  vecenv.py
src/pystk_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/race_utils/: output.py
src/super_tux_kart_agent.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: TrackPathWrapper.py  track_utils.py
(+232 files in other folders)
