[project]
name = "pystk-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyparsing>=3.3.2",
    "pysupertuxkart2>=0.5.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
